// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
@media  {
  .c-kgcOue {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-kgcOue:focus,
  .c-kgcOue:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-kgcOue:active {
    color: var(--colors-primaryDark);
  }

  .c-fIXJvv > .c-kgcOue,
  .c-iSnHBU > .c-kgcOue,
  .c-PJLV > .c-kgcOue {
    font-size: 100%;
    line-height: 1;
  }

  .c-fIXJvv > .c-kgcOue::before,
  .c-fIXJvv > .c-kgcOue::after,
  .c-iSnHBU > .c-kgcOue::before,
  .c-iSnHBU > .c-kgcOue::after,
  .c-PJLV > .c-kgcOue::before,
  .c-PJLV > .c-kgcOue::after {
    content: none;
  }

  .c-cmpvrW {
    position: relative;
  }

  .c-fIXJvv {
    color: var(--colors-tonal600);
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-fIXJvv > .c-fIXJvv:before,
  .c-fIXJvv > .c-fIXJvv:after {
    display: none;
  }

  .c-iSnHBU {
    color: var(--colors-tonal600);
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }
}

@media  {
  .c-kgcOue-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-kgcOue-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-kgcOue-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-kgcOue-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-kgcOue-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-kgcOue-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }

  .c-fIXJvv-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-fIXJvv-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-fIXJvv-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-iSnHBU-fOoUdm-size-md {
    font-size: var(--fontSizes-xl);
    line-height: 1.14;
  }

  .c-iSnHBU-fOoUdm-size-md::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-iSnHBU-fOoUdm-size-md::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }
}

<div>
  <p
    class="c-fIXJvv c-fIXJvv-gvmVBy-size-md"
  >
    <button
      class="c-kgcOue c-kgcOue-gvmVBy-size-md"
    >
      <span
        class="c-cmpvrW"
      >
        TEXT LINK
      </span>
    </button>
  </p>
  <h2
    class="c-iSnHBU c-iSnHBU-fOoUdm-size-md"
  >
    <button
      class="c-kgcOue c-kgcOue-gvmVBy-size-md"
    >
      <span
        class="c-cmpvrW"
      >
        HEADING LINK
      </span>
    </button>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-kgcOue {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-kgcOue:focus,
  .c-kgcOue:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-kgcOue:active {
    color: var(--colors-primaryDark);
  }

  .c-fIXJvv > .c-kgcOue,
  .c-iSnHBU > .c-kgcOue,
  .c-PJLV > .c-kgcOue {
    font-size: 100%;
    line-height: 1;
  }

  .c-fIXJvv > .c-kgcOue::before,
  .c-fIXJvv > .c-kgcOue::after,
  .c-iSnHBU > .c-kgcOue::before,
  .c-iSnHBU > .c-kgcOue::after,
  .c-PJLV > .c-kgcOue::before,
  .c-PJLV > .c-kgcOue::after {
    content: none;
  }
}

@media  {
  .c-kgcOue-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-kgcOue-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-kgcOue-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

<div>
  <a
    class="c-kgcOue c-kgcOue-gvmVBy-size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-kgcOue {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-kgcOue:focus,
  .c-kgcOue:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-kgcOue:active {
    color: var(--colors-primaryDark);
  }

  .c-fIXJvv > .c-kgcOue,
  .c-iSnHBU > .c-kgcOue,
  .c-PJLV > .c-kgcOue {
    font-size: 100%;
    line-height: 1;
  }

  .c-fIXJvv > .c-kgcOue::before,
  .c-fIXJvv > .c-kgcOue::after,
  .c-iSnHBU > .c-kgcOue::before,
  .c-iSnHBU > .c-kgcOue::after,
  .c-PJLV > .c-kgcOue::before,
  .c-PJLV > .c-kgcOue::after {
    content: none;
  }
}

@media  {
  .c-kgcOue-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-kgcOue-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-kgcOue-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-kgcOue-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-kgcOue-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-kgcOue-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-kgcOue c-kgcOue-jvTRJO-size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
